--- a/Eclipse/Rest_API_Base_Server-1/src/main/resources/application.properties
+++ b/Eclipse/Rest_API_Base_Server-1/src/main/resources/application.properties
@@ -1,5 +1,9 @@
+
 #configuring port
 server.port=8181
+
+#Mybatis xml file root
+mybatis.mapper-locations=classpath:static/mapper/*.xml
 
 spring.datasource.driver-class-name=oracle.jdbc.OracleDriver
 spring.datasource.url=jdbc:oracle:thin:@localhost:1521/xe
