--- a/Eclipse/Rest_API_Base_Server-1/src/main/resources/application.properties
+++ b/Eclipse/Rest_API_Base_Server-1/src/main/resources/application.properties
@@ -1,11 +1,11 @@
 
 #configuring port
-server.port=8181
+server.port=8081
 
 #Mybatis xml file root
 mybatis.mapper-locations=classpath:static/mapper/*.xml
 
 spring.datasource.driver-class-name=oracle.jdbc.OracleDriver
 spring.datasource.url=jdbc:oracle:thin:@localhost:1521/xe
-spring.datasource.username=madang
-spring.datasource.password=madang
+spring.datasource.username=scott
+spring.datasource.password=tiger
