--- a/EclipseFX/JFoenix/.classpath
+++ b/EclipseFX/JFoenix/.classpath
@@ -4,5 +4,6 @@
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.8"/>
 	<classpathentry kind="con" path="org.eclipse.fx.ide.jdt.core.JAVAFX_CONTAINER"/>
 	<classpathentry kind="lib" path="C:/Users/satellite/Downloads/jfoenix-8.0.10.jar"/>
+	<classpathentry kind="lib" path="C:/Users/satellite/Downloads/ojdbc6_g (1).jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
