--- a/workspace-jsp-hanbit/JSP_YouTube/WebContent/WEB-INF/web.xml
+++ b/workspace-jsp-hanbit/JSP_YouTube/WebContent/WEB-INF/web.xml
@@ -9,8 +9,8 @@
     <welcome-file>default.htm</welcome-file>
     <welcome-file>default.jsp</welcome-file>
   </welcome-file-list>
-  
-  <!-- web.xml을 통해 서블릿 초기 데이터를 지정하는 방법 -->
+<!--   
+  web.xml을 통해 서블릿 초기 데이터를 지정하는 방법
   <servlet>
   	<servlet-name>InitParam</servlet-name>
   	<servlet-class>org.satelite54.Servlet</servlet-class>
@@ -28,8 +28,8 @@
   
   <servlet-mapping>
   	<servlet-name>ServletInitParam</servlet-name>
-  	<!-- 맵핑명 -->
+  	맵핑명
   	<url-pattern>/InitParam</url-pattern>
   </servlet-mapping>
-  
+   -->
 </web-app>
