--- a/jsp/Jsp_study/WebContent/WEB-INF/web.xml
+++ b/jsp/Jsp_study/WebContent/WEB-INF/web.xml
@@ -9,4 +9,17 @@
     <welcome-file>default.htm</welcome-file>
     <welcome-file>default.jsp</welcome-file>
   </welcome-file-list>
+  
+  <context-param>
+ 	<param-name>id</param-name>
+ 	<param-value>abcdef</param-value>
+  </context-param>
+    <context-param>
+ 	<param-name>pw</param-name>
+ 	<param-value>abcdef</param-value>
+  </context-param>
+    <context-param>
+ 	<param-name>path</param-name>
+ 	<param-value>C:\src\workspace</param-value>
+  </context-param>
 </web-app>
