--- a/Spring_Infearn/Web_RTC_NodeJS_Google_Ex/step-05/package.json
+++ b/Spring_Infearn/Web_RTC_NodeJS_Google_Ex/step-05/package.json
@@ -3,6 +3,8 @@
   "version": "0.0.1",
   "description": "WebRTC codelab",
   "dependencies": {
+    "cors": "^2.8.5",
+    "express": "^4.17.1",
     "node-static": "^0.7.10",
     "socket.io": "^2.0.4"
   }
